--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio Webpage</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <div class="main-container">
+        <nav class="navbar">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+
+        <section class="hero">
+            <h1>Welcome to My Portfolio</h1>
+            <p>
+                Hello! I'm a web developer passionate about building beautiful and functional websites
+            </p>
+            <img src="https://placehold.co/300x200" alt="">
+        </section>
+        <section class="portfolio"></section>
+    </div>
+
+    <footer class="footer"></footer>
 </body>
 </html>
