--- a/index.html
+++ b/index.html
@@ -24,7 +24,35 @@
             </p>
             <img src="https://placehold.co/300x200" alt="">
         </section>
-        <section class="portfolio"></section>
+
+        <section class="portfolio">
+            <h2>My Projects</h2>
+            <div class="card-container">
+                <div class="card">
+                    <img src="https://placehold.co/300x200" alt="">
+                    <div class="card-content">
+                        <h3>Project 1</h3>
+                        <p>This is a dexcription of my first project. It showcase my skills in HTML, CSS and Javascript.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="https://placehold.co/300x200" alt="">
+                    <div class="card-content">
+                        <h3>Project 2</h3>
+                        <p>This is a dexcription of my first project. It showcase my skills in HTML, CSS and Javascript.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="https://placehold.co/300x200" alt="">
+                    <div class="card-content">
+                        <h3>Project 3</h3>
+                        <p>This is a dexcription of my first project. It showcase my skills in HTML, CSS and Javascript.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <footer class="footer"></footer>
