Add footer content

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
         </section>
     </div>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
