--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>
                 Hello! I'm a web developer passionate about building beautiful and functional websites
             </p>
-            <img src="https://placehold.co/300x200" alt="">
+            <img class="hero-image" src="https://placehold.co/300x200" alt="">
         </section>
 
         <section class="portfolio">
