--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <li><a href="#">Terms of Use</a></li>
             <li><a href="#">Contact Us</a></li>
         </ul>
+        <p>&copy; 2024 My Portfolio. All rights reserved.</p>
     </footer>
 </body>
 </html>
